# learnopengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/Headers/: Engine.h  camera.hpp  drawable.hpp  gui.h  imguidemo.h  scene.hpp  shader.hpp  window.h
Engine/Headers/learnopengl/: 13_mutiple_light.h  14_model_load.h  16_stencil_test.h  17_blending.h  19_framebuffers.h  20_cubemaps.h  21-advanced-GLSL.h  22-geometry-shader.h  23-Instancing.h  4_texture.h  7_camera.h  9_basic_light.h  test.h
Engine/Resources/data/21/l1/: normals.txt  positions.txt
Engine/Resources/data/21/l2/: positions.txt
Engine/Resources/data/21/l3/: texcoord.txt
Engine/Resources/data/23/l3/: instance.txt  positions.txt
Engine/Resources/shader/3/l1/: vertex.vert
Engine/Shaders/12/l3/: ObjectFragment.frag
Engine/Shaders/12/l4/: ObjectFragment.frag
Engine/Shaders/13/l1/: ObjectFragment.frag
Engine/Shaders/21/l1/: ObjectFragment.frag  ObjectVertex.vert
Engine/Shaders/22/l4/: ObjectGeometry.gs
Engine/Shaders/23/l1/: ObjectVertex.vert
Engine/Shaders/8/l1/: LightFragment.frag
Engine/Sources/: main.cpp  window.cpp
Engine/configuration/: rw_config.h.in
Engine/include/: Engine.h  core.h  drawable.hpp  gui.h  light.h  mesh.h  model.h  rw_config.h  shader.hpp
Engine/resources/data/21/l2/: texcoord.txt
Engine/resources/data/21/l3/: positions.txt
Engine/resources/data/22/l2/: normals.txt  positions.txt
Engine/resources/data/23/l3/: normals.txt
Engine/src/: window.cpp
Engine/test/: main.cpp
Engine/test/learnopengl/: 10_material.h  11_light_map.h  12_light_caster.h  13_mutiple_light.h  14_model_load.h  15_depth_testing.h  16_stencil_test.h  17_blending.h  18_face_culling.h  19_framebuffers.h  20_cubemaps.h  21-advanced-GLSL.h  22-geometry-shader.h  23-Instancing.h  3_shader.h  5_transformation.h  6_coordinatte_system.h  8_color.h  9_basic_light.h  test.h
ErrorRecord/: ErrorRecord.md
exerciseAnswer/: answer.md
